# learn-datascience

./: README.md  pyproject.toml
learn_datascience/jogja-property/: README.md  data_clean.py  data_cleaned.csv  data_dirty.csv  processed_data.csv  property_jogja.ipynb
