[tool.poetry]
name = "learn-datascience"
version = "0.1.0"
description = ""
authors = ["Nashihun Amien <nashihun.amien@mekari.com>"]
readme = "README.md"
packages = [{include = "learn_datascience"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
tqdm = "^4.66.1"
pip = "^23.2.1"
install = "^1.3.5"
geopy = "^2.3.0"
folium = "^0.14.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
